# rust-pratice-test

./: Cargo.toml  README.md  generate_data.sh
data/: sample.csv  sample2.csv  sample3.csv  sample4.csv  sample5.csv  sample6.csv
src/: client_account.rs  constants.rs  error.rs  main.rs  runner.rs  transaction.rs
