[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.2", features = ["serde"] }
csv = "1.1"
futures = "0.3.21"
itertools = "0.10.2"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }

